test/parallel/forall/task-private/error-3-ref-to-index-var.good
error-3-ref-to-index-var.chpl:8: error: 'lol' undeclared (first use this function)
